Retry Rest - Example

--- a/CosumoREST/Info.plist
+++ b/CosumoREST/Info.plist
@@ -7,7 +7,7 @@
 		<key>NSAllowsArbitraryLoadsUsageDescription</key>
 		<dict/>
 		<key>NSAllowsArbitraryLoads</key>
-		<false/>
+		<true/>
 		<key>NSExceptionDomains</key>
 		<dict>
 			<key>www.aprendeinglessila.com</key>
